--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "morphic",
+  "name": "open-compute-website",
   "version": "0.1.0",
   "private": true,
   "license": "Apache-2.0",
@@ -53,6 +53,7 @@
     "jsdom": "^22.1.0",
     "katex": "^0.16.10",
     "lucide-react": "^0.507.0",
+    "mermaid": "^11.12.0",
     "next": "^15.2.3",
     "next-themes": "^0.3.0",
     "node-html-parser": "^6.1.13",
@@ -61,12 +62,14 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.0.1",
     "react-markdown": "^8.0.7",
+    "react-mermaid": "^0.1.3",
     "react-resizable-panels": "^3.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
     "redis": "^4.7.0",
     "rehype-external-links": "^3.0.0",
     "rehype-katex": "^6.0.0",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "sonner": "^1.4.41",
